--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next/env": "^15.5.2",
+    "dayjs": "^1.11.18",
     "next": "15.5.2",
     "react": "19.1.0",
     "react-dom": "19.1.0"
